--- a/flask_dashboard/templates/error.html
+++ b/flask_dashboard/templates/error.html
@@ -60,7 +60,7 @@
         <div class="error-icon">&#9888;&#65039;</div>
         <h1 class="error-title">Data Loading Error</h1>
         <p class="error-message">{{ error }}</p>
-        <a href="/" class="btn">Go to Dashboard</a>
+        <a href="{{ url_for('index') }}" class="btn">Go to Dashboard</a>
     </div>
 </body>
 </html>
